Trying to fix a failed test

--- a/agent/intents/snap-applicationstatus_usersays_en.json
+++ b/agent/intents/snap-applicationstatus_usersays_en.json
@@ -3,7 +3,7 @@
     "id": "28b0b730-f55c-4361-a389-6ded669b94a9",
     "data": [
       {
-        "text": "I\u0027m looking for my stamps for my kids for school that received free lunch for the school year, I haven't received those yet",
+        "text": "I\u0027m looking for my stamps for my kids for school that received free lunch for the school year, I haven\u0027t received those yet",
         "userDefined": false
       },
       {
