--- a/agent/intents/tanf-applicationstatus_usersays_en.json
+++ b/agent/intents/tanf-applicationstatus_usersays_en.json
@@ -1,5 +1,57 @@
 [
   {
+    "id": "7ff4646b-978c-4e80-afb0-c072305fe782",
+    "data": [
+      {
+        "text": "Am I going to have an interview?",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "06487176-7a62-4032-ab9c-a0ccc65ecf5b",
+    "data": [
+      {
+        "text": "Will I get a notification?",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "95f8873f-aff7-484d-8297-f59a9009d3ab",
+    "data": [
+      {
+        "text": "What\u0027s the process after submitting an application?",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "b19692ad-568b-4097-a617-4141d609c62a",
+    "data": [
+      {
+        "text": "What happens after I submit my application?",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
     "id": "7a582b5c-e41e-4814-ac70-6bd134bd1a91",
     "data": [
       {
