--- a/agent/intents/snap-application_usersays_en.json
+++ b/agent/intents/snap-application_usersays_en.json
@@ -1,5 +1,93 @@
 [
   {
+    "id": "73fbaec8-f210-409d-b6db-698536f8a415",
+    "data": [
+      {
+        "text": "Application renewal",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "d329e645-c506-4677-8176-bad97682d537",
+    "data": [
+      {
+        "text": "yes. you never answered my question. can recertification application be submitted online?",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "a5e885fe-4802-42d6-aa00-9937f3012770",
+    "data": [
+      {
+        "text": "Resertification",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "e497ba4d-daa7-43c1-99a0-d92c7cdaef72",
+    "data": [
+      {
+        "text": "I need to re certify",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "38ee50c3-ba30-4f76-852f-805057088e28",
+    "data": [
+      {
+        "text": "my food stamps got cut off ",
+        "userDefined": false
+      },
+      {
+        "text": "last month",
+        "meta": "@sys.date-period",
+        "alias": "date-period",
+        "userDefined": false
+      },
+      {
+        "text": " and I was wanting to know can I get them back on",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "eaf04d05-7d43-4282-9259-91fe1ab79c66",
+    "data": [
+      {
+        "text": "Can I request a paper application through the mail",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
     "id": "2f815e29-cc1b-4999-b967-f15c9f72f1ff",
     "data": [
       {
