--- a/agent/intents/snap-applicationstatus_usersays_en.json
+++ b/agent/intents/snap-applicationstatus_usersays_en.json
@@ -1,5 +1,121 @@
 [
   {
+    "id": "dbf3bb2b-0796-4496-a401-7b9073167989",
+    "data": [
+      {
+        "text": "How do I know if my application went thru",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "06b02084-baa0-4f4f-919a-b2aebc2274c2",
+    "data": [
+      {
+        "text": "How long to process application",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "62526675-a0e4-483b-bfad-73f3ed860166",
+    "data": [
+      {
+        "text": "I already  did  my application  on line but  didn\u0027t  hear anything back ",
+        "userDefined": false
+      },
+      {
+        "text": "yet",
+        "meta": "@cadence",
+        "alias": "cadence",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "9be1cb46-9371-46f6-bbc1-067e0da3129c",
+    "data": [
+      {
+        "text": "Did my application go through",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "1219fbc7-b1b3-4da0-95d5-8c48ca60092f",
+    "data": [
+      {
+        "text": "status of application",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "badbd8d6-6dc2-4fcb-b36c-3fff9bd53185",
+    "data": [
+      {
+        "text": "I already filled out a application. Just wondering if it went threw because I have a appointment ",
+        "userDefined": false
+      },
+      {
+        "text": "today",
+        "meta": "@sys.date-time",
+        "alias": "date-time",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "ea166fbb-4edd-4a7f-aef6-138b6ce41ed4",
+    "data": [
+      {
+        "text": "my snap application has been approved and I turned on all my papers about how long till my card will be loaded",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "4d025f1f-21ce-418d-ab69-1dbd5e682e9d",
+    "data": [
+      {
+        "text": "Status of application",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
     "id": "eacaac4b-ff5f-4b69-9648-5e24a6cc4ac3",
     "data": [
       {
