--- a/chatframe/public/app/package.json
+++ b/chatframe/public/app/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.1",
+    "@reduxjs/toolkit": "^1.5.0",
     "canvas": "^2.5.0",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
@@ -47,7 +48,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
-    "@types/react-redux": "^7.1.9",
+    "@types/react-redux": "^7.1.16",
     "@types/styled-components": "^5.1.4",
     "@types/webfontloader": "^1.6.32",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
